# Cerverus

./: .gitignore  Dockerfile  README.md  cerverus_text.txt  cerverus_v1.md  coverage.xml  diagnose.sh  diagnose_windows_corrected.bat  docker-compose.override.yml  docker-compose.yml  listado_completo_recursivo.txt  project_structure.txt  pyproject.toml  pyproject.toml.backup  results_pilot.csv  results_pilot_20.csv  schema.json  sweep_results.csv  verify_env.sh
.github/: copilot-instructions.md
.github/chatmodes/: Quanty.chatmode.md
.github/docs/: enable-quanty-editing.md
.github/workflows/: ci.yml  deploy.yml
.roo/rules/: 01-comunicacion.md  02-flujo-trabajo.md  03-estilo-codigo.md  04-manejo-ambiguedad.md  05-seguridad-control.md
.roo/rules-architect/: 01-directrices-arquitectura.md
.roo/rules-ask/: 01-preguntas-y-validaciones.md
.roo/rules-code/: 01-directrices-implementacion.md
.roo/rules-debug/: 01-guia-debugging.md
.roo/rules-ml/: 01-workflow-ml.md
.roo/rules-orchestrator/: 01-flujo-coordinacion.md
airflow/config/: airflow.cfg
airflow/dags/: data_validation_dag.py  fraud_detection_pipeline.py
airflow/plugins/: __init__.py
api/: __init__.py
api/app/: main.py
api/app/core/: config.py  security.py
api/app/endpoints/: alerts.py  anomaly_detection.py  data_ingestion.py
api/app/models/: financial_data.py
api/tests/: conftest.py  test_anomaly_detect.py  test_endpoints.py
config/: airflow.cfg  app.env  database.env  docker.yml
config/environments/: local.yml  production.yml  staging.yml
config/models/: tier1_config.yml  tier2_config.yml  tier3_config.yml  tier4_config.yml
config/pipelines/: data_ingestion.yml  ml_training.yml
data/ingestion/: daily_prices_50.csv  daily_prices_50_no_stockid.csv
data/results/: enhanced_pilot_report.md  enhanced_pilot_results.csv
docker/: docker-compose.prod.yml
docker/airflow/: Dockerfile  airflow.cfg  entrypoint.sh  requirements.txt  webserver_config.py
docker/api/: Dockerfile
docker/config/: celery.conf  logging.conf
docker/config/env-templates/: development.env  production.env  staging.env
docker/ml-worker/: Dockerfile  requirements.txt  worker-entrypoint.sh
docker/monitoring/: docker-compose.monitoring.yml
docker/monitoring/prometheus/: alerts.yml
docker/nginx/: Dockerfile  default.conf
docker/postgres/: Dockerfile  init.sql  postgres.conf
docker/postgres/init-scripts/: 01-create-databases.sql  02-create-tables.sql  03-seed-data.sql
docker/redis/: Dockerfile  redis.conf
docker/scripts/: backup-db.sh  health-check.sh  init-dev.sh  init-prod.sh  restore-db.sh
docs/: 01_etapa1_recoleccion_datos.md  02_etapa2_almacenamiento_organizacion.md  03_etapa3_procesamiento_transformacion.md  04_etapa4_orquestacion_automatizacion.md  05_etapa5_calidad_datos_gobernanza.md  06_etapa6_infraestructura_despliegue.md  07_etapa7_monitoreo_observabilidad.md  PHASE0_COMPLETE.md  api_reference.md  architecture.md  data_dictionary.md
infrastructure/: README.md
infrastructure/kubernetes/manifests/: api-deployment.yaml  kafka-cluster.yaml  ml-workers.yaml
infrastructure/monitoring/prometheus/: alert_rules.yml  alertmanager_config.yml
infrastructure/terraform/: main.tf
infrastructure/terraform/environments/: dev.tf  prod.tf  staging.tf
infrastructure/terraform/modules/kafka/: README.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
notebooks/: eda.ipynb  model_training.ipynb  results_analysis.ipynb
pipelines/dags/: __init__.py  data_ingestion_dag.py  ml_pipeline_dag.py
pipelines/tasks/: data_extraction.py
reports/: pilot_20_summary.md
scripts/: build_and_deploy.sh  deploy_local.sh  import_daily_prices.sh  setup_registry.sh  test_containers.sh  validate_dependencies.py
src/app/: main.py
src/app/core/: config.py
src/cerverus/algorithms/: isolation_forest.py  lof_detector.py  lstm_detector.py  meta_learner.py
src/cerverus/config/: paths.py
src/cerverus/data/: __init__.py  cache.py  cleaning.py  error_handling.py  extraction.py  fault_tolerant_extractor.py  storage.py  transformation.py  validation.py
src/cerverus/features/: microstructure.py  technical_indicators.py
src/cerverus/models/: autoencoder_detector.py  base_detector.py  isolation_forest_model.joblib  lof_model.joblib  tier1.py  tier2.py  tier3.py  tier4.py  tier5_redesigned.joblib
src/cerverus/monitoring/: logging.py  metrics.py  metrics_collector.py  sla_monitor.py
src/cerverus/utils/: config.py  exceptions.py
src/tests/: __init__.py
test-reports/: coverage.xml  junit.xml
tests/e2e/: alert_generation_flow.py  fraud_detection_flow.py
tests/fixtures/: __init__.py  known_anomalies.json  sample_trades.json
tests/helpers/: __init__.py  mock_services.py  test_data_factory.py
tests/integration/: test._integration.py
tests/performance/: load_testing.py  stress_testing.py  test_performance.py
tests/unit/application/: test_detect_anomalies.py
tests/unit/domain/: test_fraud_detector.py
tools/: contamination_sweep.py  enhanced_pilot.py  gen_sample_data.py  run_pilot.py
(+27 files in other folders)
