[tool.poetry]
name = "cerverus"
version = "0.1.0"
description = "Financial Anomaly Detection System"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = [{ include = "cerverus", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
fastapi = ">=0.109.1"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
# Data Processing
pandas = "^2.1.3"
numpy = "^1.25.2"
scikit-learn = "^1.3.2"
yfinance = "^0.2.21"
requests = "^2.31.0"
# Database
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
# Utilities
python-multipart = ">=0.0.18"
setuptools = ">=78.1.1"
starlette = ">=0.40.0"

[tool.poetry.group.dev.dependencies]
# Testing & Quality
pytest = "^7.4.3"
httpx = "^0.25.2"
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.12.0"
# Notebooks
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipykernel = "^6.26.0"
# DevOps
docker = "^6.1.0"
kubernetes = "^28.1.0"
# Resiliency & Messaging
circuitbreaker = "^1.4.0"
aio-pika = "^9.3.0"
redis = "^5.0.1"
# Observabilidad
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"

[tool.poetry.group.prod.dependencies]
# Seguridad
pyjwt = "^2.8.0"
cryptography = "^41.0.7"
# Servidor de producción
gunicorn = "^21.2.0"

[tool.poetry.group.test.dependencies]
# Testing Framework
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
# Mocking
faker = "^19.6.1"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.backend"
